--- a/backend/package.json
+++ b/backend/package.json
@@ -53,6 +53,7 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "jest": "^29.7.0",
+    "patch-package": "^8.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
