--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,37 @@
 .idea/
+.vscode/
+
+# OS-specific
+.DS_Store
+Thumbs.db
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+*.log
+
+# Environment files (do not commit secrets)
+.env
+.env.local
+.env.development
+.env.test
+.env.production
+.env.*.local
+
+# Keep templates tracked
+!/backend/.env.template
+!/storefront/.env.local.template
+
+# Node/JS build artifacts
+node_modules/
+dist/
+build/
+.cache/
+
+# Medusa build outputs
+.medusa/
+
+# Coverage
+coverage/
