--- a/storefront/.gitignore
+++ b/storefront/.gitignore
@@ -35,6 +35,8 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
+# Keep template tracked
+!/.env.local.template
 
 # vercel
 .vercel
