feat: WhatsApp checkout flow, admin readiness endpoint, n8n API audit and CSV spec; storefront cart and UI improvements

--- a/storefront/.env.local.template
+++ b/storefront/.env.local.template
@@ -7,6 +7,10 @@ NEXT_PUBLIC_BASE_URL=http://localhost:8000
 # Your preferred default region. When middleware cannot determine the user region from the request IP, this will be used instead.
 NEXT_PUBLIC_DEFAULT_REGION=us
 
+# Publishable API key for Medusa JS SDK and middleware
+# Create one in the Medusa Admin under "Settings → Publishable API Keys"
+NEXT_PUBLIC_MEDUSA_PUBLISHABLE_KEY=your_publishable_key_here
+
 # Minio endpoint for image storage (optional)
 # NEXT_PUBLIC_MINIO_ENDPOINT=bucket-production-eaeb.up.railway.app
 
