--- a/backend/.env.template
+++ b/backend/.env.template
@@ -26,3 +26,8 @@ SENDGRID_FROM=
 # MEILISEARCH_HOST=your-meilisearch-host # e.g. http://localhost:7700
 # MEILISEARCH_MASTER_KEY=your-master-key # Required if MEILISEARCH_ADMIN_KEY is not set
 # MEILISEARCH_ADMIN_KEY=your-admin-key # Optional - if not set, will be fetched using master key
+
+# WhatsApp recipient numbers (E.164 format)
+# Example local values:
+# WHATSAPP_RAY_NUMBER=+263776578556
+# WHATSAPP_VAL_NUMBER=+263786705061
