Fix: Add type module to package.json for ES modules support

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "description": "A Prebaked Medusa 2.0 backend",
   "author": "Rasmus Puls",
   "license": "MIT",
+  "type": "module",
   "keywords": [
     "sqlite",
     "postgres",
