--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,7 @@
   ],
   "scripts": {
     "build": "medusa build",
-    "postbuild": "node src/scripts/postBuild.js",
+    "post-build": "node src/scripts/postBuild.js",
     "seed": "medusa exec ./src/scripts/seed.ts",
     "ib": "init-backend",
     "start": "init-backend && cd .medusa/server && medusa start --verbose",
